Update book images, add additional years

--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 08/05/2021 06:00<br>
+Completed books sorted by folder - 08/05/2021 13:46<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 47 books - 441H 47M / 18D 9H 47M<br>
@@ -161,7 +161,7 @@ The Sixth Extinction - An Unnatural History - Elizabeth Kolbert - 9H 59M<br>
 The Subtle Art of Not Giving a Fck - Mark Manson - 5H 18M<br>
 The Unbeatable Squirrel Girl Vol. 1 Squirrel Power - 3H 59M<br>
 Thinking, Fast and Slow - Daniel Kahneman - 20H 7M<br>
-This Census-Taker - China Miéville - 4H 3M<br>
+This Census-Taker - China MiÃ©ville - 4H 3M<br>
 White Sand vol 1 - Brandon Sanderson - 4H 57M<br>
 Wisdom of Crowds - James Surowiecki - 9H 33M<br>
 You Have Arrived at Your Destination - Amor Towles - 1H 22M<br>
@@ -484,8 +484,8 @@ Average completed per year: 44.2 titles - 491H 8M / 20D 11H 8M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.988 (1.988 seconds)<br>
-Total time including file writes: 00:00:01.988 (1.988 seconds)
+Total time to process all reports: 00:00:01.401 (1.401 seconds)<br>
+Total time including file writes: 00:00:01.402 (1.402 seconds)
 </div>
 </body>
 </html>
