--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 08/05/2021 06:00<br>
+Reserved books sorted by length - 08/05/2021 13:46<br>
 -----------------------------------------------------<br>
  <br>
 806 books<br>
@@ -244,7 +244,7 @@ Time Quartet 4 - Many Waters - Madeleine L'engle - 8H 57M (Book Reserve - Audiob
 Machineries of Empire 2 - Raven Stratagem - Yoon Ha Lee - 9H 1M (Book Reserve - Physical and Kindle Books)<br>
 Flowers for Algernon - Daniel Keyes - 9H 2M (Book Reserve - Audiobooks)<br>
 Bezonomics - Brian Dumaine - 9H 2M (Book Reserve - Audiobooks)<br>
-VocabuLearn® German Complete - 9H 2M (Queue - Current Audiobooks)<br>
+VocabuLearnÂ® German Complete - 9H 2M (Queue - Current Audiobooks)<br>
 The Uninhabitable Earth - David Wallace-Wells - 9H 2M (Queue - Current Audiobooks)<br>
 The Sirens of Titan - Kurt Vonnegut - 9H 4M (Book Reserve - Audiobooks (Need new source))<br>
 Heir to the Jedi - Kevin Hearne - 9H 4M (Book Reserve - Audiobooks)<br>
@@ -762,8 +762,8 @@ Average completed per year: 44.2 titles - 491H 8M / 20D 11H 8M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.988 (1.988 seconds)<br>
-Total time including file writes: 00:00:01.988 (1.988 seconds)
+Total time to process all reports: 00:00:01.401 (1.401 seconds)<br>
+Total time including file writes: 00:00:01.402 (1.402 seconds)
 </div>
 </body>
 </html>
