--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 08/05/2021 06:00<br>
+Reserved books sorted by folder - 08/05/2021 13:46<br>
 -----------------------------------------------------<br>
  <br>
 Queue - Current Audiobooks : 174 books - 2253H 50M / 93D 21H 50M<br>
@@ -172,7 +172,7 @@ Ultralearning - Scott Young - 7H 48M<br>
 Until the End of Time - Brian Greene - 14H 40M<br>
 Unwinding Anxiety - Judson Brewer - 7H 23M<br>
 Uprooted - Naomi Novik - 17H 49M<br>
-VocabuLearn® German Complete - 9H 2M<br>
+VocabuLearnÂ® German Complete - 9H 2M<br>
 Wayfarers 1 - The Long Way to a Small, Angry Planet - Becky Chambers - 14H 27M<br>
 We - Yevgeny Zamyatin - 6H 53M<br>
 We Have Always Lived in the Castle - Shirley Jackson - 5H 34M<br>
@@ -878,8 +878,8 @@ Average completed per year: 44.2 titles - 491H 8M / 20D 11H 8M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.988 (1.988 seconds)<br>
-Total time including file writes: 00:00:01.988 (1.988 seconds)
+Total time to process all reports: 00:00:01.401 (1.401 seconds)<br>
+Total time including file writes: 00:00:01.402 (1.402 seconds)
 </div>
 </body>
 </html>
