Update book images, add additional years

--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 08/05/2021 13:46<br>
+Completed books sorted by folder - 08/05/2021 15:05<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 47 books - 441H 47M / 18D 9H 47M<br>
@@ -283,7 +283,7 @@ Stormlight Archive 1 - The Way of Kings - Brandon Sanderson - 45H 43M<br>
 The Andromeda Strain - Michael Crichton - 2H 54M<br>
 The Carpet People - Terry Pratchett - 5H 37M<br>
 The Chronicles of Amber 04 - The Hand of Oberon - 6H 2M<br>
-The Chronicles of Amber 05 - Court of Chaos - 5H 21M<br>
+The Chronicles of Amber 05 - The Courts of Chaos - 5H 21M<br>
 The Dark Tower III - The Waste Lands - 18H 13M<br>
 The Dark Tower IV - Wizard and Glass - 27H 40M<br>
 The Dark Tower V - Wolves of the Calla - 25H 57M<br>
@@ -301,7 +301,7 @@ Discworld 03 - Equal Rites - 7H 42M<br>
 Discworld 05 - Sourcery - 7H 51M<br>
 Discworld 06 - Wyrd Sisters - 8H 5M<br>
 Discworld 09 - Eric - 3H 35M<br>
-Discworld 28 - The Amazing Maurice - 6H 21M<br>
+Discworld 28 - The Amazing Maurice and His Educated Rodents - 6H 21M<br>
 Discworld 30 - The Wee Free Men - 7H 13M<br>
 Discworld 32 - A Hat Full of Sky - 8H 47M<br>
 Discworld 40 - Raising Steam - 12H 23M<br>
@@ -484,8 +484,8 @@ Average completed per year: 44.2 titles - 491H 8M / 20D 11H 8M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.401 (1.401 seconds)<br>
-Total time including file writes: 00:00:01.402 (1.402 seconds)
+Total time to process all reports: 00:00:01..42 (1.42 seconds)<br>
+Total time including file writes: 00:00:01.421 (1.421 seconds)
 </div>
 </body>
 </html>
