--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 08/05/2021 13:46<br>
+Completed books sorted by length - 08/05/2021 15:05<br>
 -----------------------------------------------------<br>
  <br>
 380 books<br>
@@ -92,7 +92,7 @@ Ender 08 - First Meetings - 5H 15M (Completed in 2013)<br>
 Cat's Cradle - Kurt Vonnegut - 5H 15M (Completed in 2015)<br>
 The Subtle Art of Not Giving a Fck - Mark Manson - 5H 18M (Completed in 2020)<br>
 Darwin's Radio - Greg Bear - 5H 19M (Completed in 2015)<br>
-The Chronicles of Amber 05 - Court of Chaos - 5H 21M (Completed in 2017)<br>
+The Chronicles of Amber 05 - The Courts of Chaos - 5H 21M (Completed in 2017)<br>
 Narnia 6 - The Silver Chair - C. S. Lewis - 5H 27M (Completed in 2020)<br>
 Wonder Woman Vol. 1 The Lies (Rebirth) - 5H 28M (Completed in 2021)<br>
 M is for Magic - Neil Gaiman - 5H 30M (Completed in 2017)<br>
@@ -120,7 +120,7 @@ Dirk Gently 2 - The Long Dark Tea-Time of the Soul - Douglas Adams - 6H 4M (Comp
 How to Live Safely in a Science Fictional Universe - Charles Yu - 6H 8M (Completed in 2020)<br>
 A Night in the Lonesome October - Roger Zelazny - 6H 8M (Completed in 2020)<br>
 The Chronicles of Amber 03 - Sign of the Unicorn - 6H 13M (Completed in 2016)<br>
-Discworld 28 - The Amazing Maurice - 6H 21M (Completed in 2016)<br>
+Discworld 28 - The Amazing Maurice and His Educated Rodents - 6H 21M (Completed in 2016)<br>
 Ender 12 - Shadows in Flight - 6H 24M (Completed in 2014)<br>
 Freakonomics - Steven D. Levitt - 6H 27M (Completed in 2020)<br>
 House Of M Ultimate Edition - 6H 28M (Completed in 2021)<br>
@@ -413,8 +413,8 @@ Average completed per year: 44.2 titles - 491H 8M / 20D 11H 8M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.401 (1.401 seconds)<br>
-Total time including file writes: 00:00:01.402 (1.402 seconds)
+Total time to process all reports: 00:00:01..42 (1.42 seconds)<br>
+Total time including file writes: 00:00:01.421 (1.421 seconds)
 </div>
 </body>
 </html>
