--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 08/05/2021 13:46<br>
+Reserved books sorted by folder - 08/05/2021 15:05<br>
 -----------------------------------------------------<br>
  <br>
 Queue - Current Audiobooks : 174 books - 2253H 50M / 93D 21H 50M<br>
@@ -878,8 +878,8 @@ Average completed per year: 44.2 titles - 491H 8M / 20D 11H 8M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.401 (1.401 seconds)<br>
-Total time including file writes: 00:00:01.402 (1.402 seconds)
+Total time to process all reports: 00:00:01..42 (1.42 seconds)<br>
+Total time including file writes: 00:00:01.421 (1.421 seconds)
 </div>
 </body>
 </html>
