--- a/report/books/index.html
+++ b/report/books/index.html
@@ -52,6 +52,9 @@
     <a href="2020_book_images.html">2020 Book Images</a><BR>
     <a href="2019_book_images.html">2019 Book Images</a><BR>
     <a href="2018_book_images.html">2018 Book Images</a><BR>
+    <a href="2017_book_images.html">2017 Book Images</a><BR>
+    <a href="2016_book_images.html">2016 Book Images</a><BR>
+    <a href="2015_book_images.html">2015 Book Images</a><BR>
 </div>
 </body>
 </html>
