--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 08/05/2021 13:46<br>
+All books sorted by name - 08/05/2021 15:05<br>
 -----------------------------------------------------<br>
  <br>
 1186 books<br>
@@ -283,7 +283,7 @@ Discworld 24 - The Fifth Elephant - 10H 45M (Book Reserve - Audiobooks)<br>
 Discworld 25 - The Truth - 10H 11M (Book Reserve - Audiobooks)<br>
 Discworld 26 - Thief of Time - 11H 43M (Book Reserve - Audiobooks)<br>
 Discworld 27 - The Last Hero - 4H 25M (Completed in 2020)<br>
-Discworld 28 - The Amazing Maurice - 6H 21M (Completed in 2016)<br>
+Discworld 28 - The Amazing Maurice and His Educated Rodents - 6H 21M (Completed in 2016)<br>
 Discworld 29 - Night Watch - 10H 45M (Book Reserve - Audiobooks)<br>
 Discworld 30 - The Wee Free Men - 7H 13M (Completed in 2016)<br>
 Discworld 31 - Monstrous Regiment - 11H 42M (Completed in 2015)<br>
@@ -867,7 +867,7 @@ The Chronicles of Amber 01 - Nine Princes in Amber - 6H 2M (Completed in 2016)<b
 The Chronicles of Amber 02 - The Guns of Avalon - 6H 57M (Completed in 2016)<br>
 The Chronicles of Amber 03 - Sign of the Unicorn - 6H 13M (Completed in 2016)<br>
 The Chronicles of Amber 04 - The Hand of Oberon - 6H 2M (Completed in 2017)<br>
-The Chronicles of Amber 05 - Court of Chaos - 5H 21M (Completed in 2017)<br>
+The Chronicles of Amber 05 - The Courts of Chaos - 5H 21M (Completed in 2017)<br>
 The Chronicles of Amber 06 - Trumps of Doom - 5H 51M (Completed in 2021)<br>
 The Chronicles of Amber 07 - Blood of Amber - 7H 18M (Queue - Current Audiobooks)<br>
 The Chronicles of Amber 08 - Sign of Chaos - 6H 53M (Queue - Current Audiobooks)<br>
@@ -1237,8 +1237,8 @@ Average completed per year: 44.2 titles - 491H 8M / 20D 11H 8M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.401 (1.401 seconds)<br>
-Total time including file writes: 00:00:01.402 (1.402 seconds)
+Total time to process all reports: 00:00:01..42 (1.42 seconds)<br>
+Total time including file writes: 00:00:01.421 (1.421 seconds)
 </div>
 </body>
 </html>
