Update book images, add additional years

--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 08/05/2021 15:05<br>
+Completed books sorted by folder - 08/05/2021 15:27<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 47 books - 441H 47M / 18D 9H 47M<br>
@@ -484,8 +484,8 @@ Average completed per year: 44.2 titles - 491H 8M / 20D 11H 8M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01..42 (1.42 seconds)<br>
-Total time including file writes: 00:00:01.421 (1.421 seconds)
+Total time to process all reports: 00:00:01.434 (1.434 seconds)<br>
+Total time including file writes: 00:00:01.434 (1.434 seconds)
 </div>
 </body>
 </html>
