--- a/report/books/index.html
+++ b/report/books/index.html
@@ -55,6 +55,8 @@
     <a href="2017_book_images.html">2017 Book Images</a><BR>
     <a href="2016_book_images.html">2016 Book Images</a><BR>
     <a href="2015_book_images.html">2015 Book Images</a><BR>
+    <a href="2014_book_images.html">2014 Book Images</a><BR>
+    <a href="2013_book_images.html">2013 Book Images</a><BR>
 </div>
 </body>
 </html>
