change landing page to consolidate book images by year

--- a/report/books/index.html
+++ b/report/books/index.html
@@ -25,6 +25,7 @@
             background-color: transparent;
             text-decoration: underline;
         }
+
     </style>
     <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
@@ -32,6 +33,8 @@
 </head>
 <body>
 <div class="content">
+    <BR>
+<a href="book_images_by_year.html">Book Images by Year</a><BR>
     <BR>
 <a href="Completed_books_sorted_by_folder.html">Completed Books by Year</a><BR>
 <a href="Completed_books_sorted_by_length.html">Completed Books by Length</a><BR>
@@ -48,15 +51,6 @@
     <BR>
 <a href="sanderstatus.html">Brandon Sanderson Status Report</a><BR>
     <BR>
-    <a href="2021_book_images.html">2021 Book Images</a><BR>
-    <a href="2020_book_images.html">2020 Book Images</a><BR>
-    <a href="2019_book_images.html">2019 Book Images</a><BR>
-    <a href="2018_book_images.html">2018 Book Images</a><BR>
-    <a href="2017_book_images.html">2017 Book Images</a><BR>
-    <a href="2016_book_images.html">2016 Book Images</a><BR>
-    <a href="2015_book_images.html">2015 Book Images</a><BR>
-    <a href="2014_book_images.html">2014 Book Images</a><BR>
-    <a href="2013_book_images.html">2013 Book Images</a><BR>
 </div>
 </body>
 </html>
