--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 08/05/2021 15:27<br>
+Completed books sorted by folder - 08/06/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 47 books - 441H 47M / 18D 9H 47M<br>
 Total Comic Trades : 19<br>
 Average book length : 9H 23M<br>
-Hours read per week : 14H 15M<br>
-On pace to complete 79 books (743H 35M / 30D 23H 35M) by the end of 2021<br>
+Hours read per week : 14H 11M<br>
+On pace to complete 78 books (740H 8M / 30D 20H 8M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -161,7 +161,7 @@ The Sixth Extinction - An Unnatural History - Elizabeth Kolbert - 9H 59M<br>
 The Subtle Art of Not Giving a Fck - Mark Manson - 5H 18M<br>
 The Unbeatable Squirrel Girl Vol. 1 Squirrel Power - 3H 59M<br>
 Thinking, Fast and Slow - Daniel Kahneman - 20H 7M<br>
-This Census-Taker - China MiÃ©ville - 4H 3M<br>
+This Census-Taker - China Miéville - 4H 3M<br>
 White Sand vol 1 - Brandon Sanderson - 4H 57M<br>
 Wisdom of Crowds - James Surowiecki - 9H 33M<br>
 You Have Arrived at Your Destination - Amor Towles - 1H 22M<br>
@@ -480,12 +480,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 380 titles - 4219H 35M / 175D 19H 35M<br>
 Total remaining in queue and reserve: 806 titles - 10067H 13M / 419D 11H 13M<br>
-Average completed per year: 44.2 titles - 491H 8M / 20D 11H 8M<br>
+Average completed per year: 44.2 titles - 490H 59M / 20D 10H 59M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.2<br>
+Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:01.434 (1.434 seconds)<br>
-Total time including file writes: 00:00:01.434 (1.434 seconds)
+Total time to process all reports: 00:00:01.582 (1.582 seconds)<br>
+Total time including file writes: 00:00:01.582 (1.582 seconds)
 </div>
 </body>
 </html>
