--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 08/05/2021 15:27<br>
+Reserved books sorted by folder - 08/06/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Queue - Current Audiobooks : 174 books - 2253H 50M / 93D 21H 50M<br>
@@ -172,7 +172,7 @@ Ultralearning - Scott Young - 7H 48M<br>
 Until the End of Time - Brian Greene - 14H 40M<br>
 Unwinding Anxiety - Judson Brewer - 7H 23M<br>
 Uprooted - Naomi Novik - 17H 49M<br>
-VocabuLearnÂ® German Complete - 9H 2M<br>
+VocabuLearn® German Complete - 9H 2M<br>
 Wayfarers 1 - The Long Way to a Small, Angry Planet - Becky Chambers - 14H 27M<br>
 We - Yevgeny Zamyatin - 6H 53M<br>
 We Have Always Lived in the Castle - Shirley Jackson - 5H 34M<br>
@@ -874,12 +874,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 380 titles - 4219H 35M / 175D 19H 35M<br>
 Total remaining in queue and reserve: 806 titles - 10067H 13M / 419D 11H 13M<br>
-Average completed per year: 44.2 titles - 491H 8M / 20D 11H 8M<br>
+Average completed per year: 44.2 titles - 490H 59M / 20D 10H 59M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.2<br>
+Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:01.434 (1.434 seconds)<br>
-Total time including file writes: 00:00:01.434 (1.434 seconds)
+Total time to process all reports: 00:00:01.582 (1.582 seconds)<br>
+Total time including file writes: 00:00:01.582 (1.582 seconds)
 </div>
 </body>
 </html>
