--- a/report/books/sanderstatus.html
+++ b/report/books/sanderstatus.html
@@ -7,16 +7,11 @@
 </head>
 <body>
 <div class="content">
-Progress bars collected from from brandonsanderson.com on 2021-08-05<br>
-<br>
+Progress bars collected from from brandonsanderson.com on 2021-08-06<br><br>
 Cytonic 2nd Proofread 100%<br>
-<br>
 Wax & Wayne Book 4 (Mistborn 7) 100%<br>
-<br>
 ReDawn (Skyward Novella 2) Draft 3.0 100%<br>
-<br>
 Evershore (Skyward Novella 3) Draft 1.0 100%<br>
-<br>
 </div>
 </body>
 </html>
