book and media report content update Sun 08/08/2021

--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 08/08/2021 06:00<br>
+Completed books sorted by length - 08/08/2021 22:06<br>
 -----------------------------------------------------<br>
  <br>
-380 books<br>
+381 books<br>
  <br>
 Shadow War of the Night Dragons 1 -The Dead City - Prologue - John Scalzi - 0H 21M (Completed in 2014)<br>
 Gratitude - Oliver Sacks - 0H 36M (Completed in 2020)<br>
@@ -201,6 +201,7 @@ Southern Reach Trilogy Book 3 - Acceptance - Jeff VanderMeer - 9H 41M (Completed
 Never Let Me Go - Kazuo Ishiguro - 9H 43M (Completed in 2019)<br>
 Miss Peregrine 1 - Miss Peregrine's Home for Peculiar Children - Ransom Riggs - 9H 45M (Completed in 2014)<br>
 Discworld 15 - Men at Arms - 9H 45M (Completed in 2020)<br>
+Discworld 20 - Hogfather - 9H 48M (Completed in 2021)<br>
 Discworld 13 - Small Gods - 9H 49M (Completed in 2017)<br>
 Old Man's War 3 - The Last Colony - John Scalzi - 9H 54M (Completed in 2015)<br>
 Old Man's War 1 - Old Man's War - John Scalzi - 9H 54M (Completed in 2014)<br>
@@ -379,9 +380,9 @@ Stormlight Archive 4 - Rhythm of War - Brandon Sanderson - 57H 41M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 174 books - 2253H 50M / 93D 21H 50M<br>
+Queue - Current Audiobooks - 173 books - 2244H 2M / 93D 12H 2M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 47 books - 441H 47M / 18D 9H 47M<br>
+Completed in 2021 - 48 books - 451H 35M / 18D 19H 35M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -399,22 +400,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-207 queued items: 2760H 56M / 115D 0H 56M<br>
+206 queued items: 2751H 8M / 114D 15H 8M<br>
 0 reserve titles are marked as high priority<br>
-25.68% of reserve items are queued<br>
+25.59% of reserve items are queued<br>
  <br>
 All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 380 titles - 4219H 35M / 175D 19H 35M<br>
-Total remaining in queue and reserve: 806 titles - 10067H 13M / 419D 11H 13M<br>
-Average completed per year: 44.2 titles - 490H 40M / 20D 10H 40M<br>
+Total completed since 01/01/2013: 381 titles - 4229H 23M / 176D 5H 23M<br>
+Total remaining in queue and reserve: 805 titles - 10057H 24M / 419D 1H 24M<br>
+Average completed per year: 44.3 titles - 491H 48M / 20D 11H 48M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.593 (1.593 seconds)<br>
-Total time including file writes: 00:00:01.594 (1.594 seconds)
+Total time to process all reports: 00:00:03.438 (3.438 seconds)<br>
+Total time including file writes: 00:00:03.439 (3.439 seconds)
 </div>
 </body>
 </html>
