--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 08/08/2021 06:00<br>
+Completed books sorted by name - 08/08/2021 22:06<br>
 -----------------------------------------------------<br>
  <br>
-380 books<br>
+381 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -102,6 +102,7 @@ Discworld 16 - Soul Music - 9H 15M (Completed in 2020)<br>
 Discworld 17 - Intreresting Times - 10H 3M (Completed in 2021)<br>
 Discworld 18 - Maskerade - 8H 51M (Completed in 2021)<br>
 Discworld 19 - Feet of Clay - 9H 33M (Completed in 2021)<br>
+Discworld 20 - Hogfather - 9H 48M (Completed in 2021)<br>
 Discworld 27 - The Last Hero - 4H 25M (Completed in 2020)<br>
 Discworld 28 - The Amazing Maurice and His Educated Rodents - 6H 21M (Completed in 2016)<br>
 Discworld 30 - The Wee Free Men - 7H 13M (Completed in 2016)<br>
@@ -397,9 +398,9 @@ Zones of Thought 1 - A Fire Upon the Deep - Vernor Vinge - 21H 43M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 174 books - 2253H 50M / 93D 21H 50M<br>
+Queue - Current Audiobooks - 173 books - 2244H 2M / 93D 12H 2M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 47 books - 441H 47M / 18D 9H 47M<br>
+Completed in 2021 - 48 books - 451H 35M / 18D 19H 35M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -417,22 +418,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-207 queued items: 2760H 56M / 115D 0H 56M<br>
+206 queued items: 2751H 8M / 114D 15H 8M<br>
 0 reserve titles are marked as high priority<br>
-25.68% of reserve items are queued<br>
+25.59% of reserve items are queued<br>
  <br>
 All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 380 titles - 4219H 35M / 175D 19H 35M<br>
-Total remaining in queue and reserve: 806 titles - 10067H 13M / 419D 11H 13M<br>
-Average completed per year: 44.2 titles - 490H 40M / 20D 10H 40M<br>
+Total completed since 01/01/2013: 381 titles - 4229H 23M / 176D 5H 23M<br>
+Total remaining in queue and reserve: 805 titles - 10057H 24M / 419D 1H 24M<br>
+Average completed per year: 44.3 titles - 491H 48M / 20D 11H 48M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.593 (1.593 seconds)<br>
-Total time including file writes: 00:00:01.594 (1.594 seconds)
+Total time to process all reports: 00:00:03.438 (3.438 seconds)<br>
+Total time including file writes: 00:00:03.439 (3.439 seconds)
 </div>
 </body>
 </html>
