--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 08/08/2021 06:00<br>
+Completed books sorted by folder - 08/08/2021 22:06<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 47 books - 441H 47M / 18D 9H 47M<br>
+Completed in 2021 : 48 books - 451H 35M / 18D 19H 35M<br>
 Total Comic Trades : 19<br>
-Average book length : 9H 23M<br>
-Hours read per week : 14H 3M<br>
-On pace to complete 78 books (733H 26M / 30D 13H 26M) by the end of 2021<br>
+Average book length : 9H 24M<br>
+Hours read per week : 14H 22M<br>
+On pace to complete 79 books (749H 40M / 31D 5H 40M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -29,6 +29,7 @@ Dawnshard - Brandon Sanderson - 6H 28M<br>
 Discworld 17 - Intreresting Times - 10H 3M<br>
 Discworld 18 - Maskerade - 8H 51M<br>
 Discworld 19 - Feet of Clay - 9H 33M<br>
+Discworld 20 - Hogfather - 9H 48M<br>
 Doomsday Clock 1 - 6H 58M<br>
 Doomsday Clock 2 - 7H 13M<br>
 Expanse 6 - Babylon's Ashes - James S. A. Corey - 20H 4M<br>
@@ -450,9 +451,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 174 books - 2253H 50M / 93D 21H 50M<br>
+Queue - Current Audiobooks - 173 books - 2244H 2M / 93D 12H 2M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 47 books - 441H 47M / 18D 9H 47M<br>
+Completed in 2021 - 48 books - 451H 35M / 18D 19H 35M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -470,22 +471,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-207 queued items: 2760H 56M / 115D 0H 56M<br>
+206 queued items: 2751H 8M / 114D 15H 8M<br>
 0 reserve titles are marked as high priority<br>
-25.68% of reserve items are queued<br>
+25.59% of reserve items are queued<br>
  <br>
 All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 380 titles - 4219H 35M / 175D 19H 35M<br>
-Total remaining in queue and reserve: 806 titles - 10067H 13M / 419D 11H 13M<br>
-Average completed per year: 44.2 titles - 490H 40M / 20D 10H 40M<br>
+Total completed since 01/01/2013: 381 titles - 4229H 23M / 176D 5H 23M<br>
+Total remaining in queue and reserve: 805 titles - 10057H 24M / 419D 1H 24M<br>
+Average completed per year: 44.3 titles - 491H 48M / 20D 11H 48M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.593 (1.593 seconds)<br>
-Total time including file writes: 00:00:01.594 (1.594 seconds)
+Total time to process all reports: 00:00:03.438 (3.438 seconds)<br>
+Total time including file writes: 00:00:03.439 (3.439 seconds)
 </div>
 </body>
 </html>
