--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -54,6 +54,7 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1468297795l/31019189.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1308117804l/6402364.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1574745868l/49984917._SX318_SY475_.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1416342611l/34532.jpg" width="300" >
 </div>
 </body>
 </html>
