--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 08/09/2021 06:00<br>
+Completed books sorted by folder - 08/09/2021 08:44<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 48 books - 451H 35M / 18D 19H 35M<br>
@@ -162,7 +162,7 @@ The Sixth Extinction - An Unnatural History - Elizabeth Kolbert - 9H 59M<br>
 The Subtle Art of Not Giving a Fck - Mark Manson - 5H 18M<br>
 The Unbeatable Squirrel Girl Vol. 1 Squirrel Power - 3H 59M<br>
 Thinking, Fast and Slow - Daniel Kahneman - 20H 7M<br>
-This Census-Taker - China Miéville - 4H 3M<br>
+This Census-Taker - China MiÃ©ville - 4H 3M<br>
 White Sand vol 1 - Brandon Sanderson - 4H 57M<br>
 Wisdom of Crowds - James Surowiecki - 9H 33M<br>
 You Have Arrived at Your Destination - Amor Towles - 1H 22M<br>
@@ -485,8 +485,8 @@ Average completed per year: 44.3 titles - 491H 39M / 20D 11H 39M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.787 (1.787 seconds)<br>
-Total time including file writes: 00:00:01.787 (1.787 seconds)
+Total time to process all reports: 00:00:01.537 (1.537 seconds)<br>
+Total time including file writes: 00:00:01.537 (1.537 seconds)
 </div>
 </body>
 </html>
