--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 08/09/2021 06:00<br>
+Completed books sorted by length - 08/09/2021 08:44<br>
 -----------------------------------------------------<br>
  <br>
 381 books<br>
@@ -67,7 +67,7 @@ Narnia 1 - Magicians Nephew - C. S. Lewis - 3H 58M (Completed in 2020)<br>
 Rosencrantz and Guildenstern Are Dead - Tom Stoppard - 3H 59M (Completed in 2019)<br>
 The Wonderful Wizard of Oz - L. Frank Baum - 3H 59M (Completed in 2018)<br>
 Don't Sweat the Small Stuff...And It's All Small - Richard Carlson - 4H 3M (Completed in 2019)<br>
-This Census-Taker - China Miéville - 4H 3M (Completed in 2020)<br>
+This Census-Taker - China MiÃ©ville - 4H 3M (Completed in 2020)<br>
 Nightflyers - George R. R. Martin - 4H 5M (Completed in 2019)<br>
 Dragons at Crumbling Castle - Terry Pratchett - 4H 10M (Completed in 2017)<br>
 Rocket Raccoon & Groot Vol. 1 Tricks of the Trade - 4H 14M (Completed in 2020)<br>
@@ -414,8 +414,8 @@ Average completed per year: 44.3 titles - 491H 39M / 20D 11H 39M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.787 (1.787 seconds)<br>
-Total time including file writes: 00:00:01.787 (1.787 seconds)
+Total time to process all reports: 00:00:01.537 (1.537 seconds)<br>
+Total time including file writes: 00:00:01.537 (1.537 seconds)
 </div>
 </body>
 </html>
