--- a/report/books/sanderstatus.html
+++ b/report/books/sanderstatus.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 <div class="content">
-Progress bars collected from from brandonsanderson.com on 2021-08-11<br>
+Progress bars collected from from brandonsanderson.com on 2021-08-12<br>
 <br>
 Cytonic 2nd Proofread 100%<br>
 <br>
-Wax & Wayne Book 4 (Mistborn 7) 100%<br>
+Wax & Wayne Book 4 (Mistborn 7) Draft 2.0 7%<br>
 <br>
 ReDawn (Skyward Novella 2) Final Draft 50%<br>
 <br>
