--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 08/13/2021 06:00<br>
+Reserved books sorted by folder - 08/14/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 172 books - 2235H 17M / 93D 3H 17M<br>
+Queue - Current Audiobooks : 173 books - 2238H 23M / 93D 6H 23M<br>
  <br>
 112263 - Stephen King - 30H 46M<br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
@@ -109,6 +109,7 @@ Skin in the Game - Nassim Nicholas Taleb - 8H 23M<br>
 Stamped--Racism, Antiracism, and You - Jason Reynolds - Ibram X. Kendi - 4H 12M<br>
 Stand on Zanzibar - John Brunner - 21H 22M<br>
 Star Wars the High Republic - The Rising Storm - Cavan Scott - 15H 36M<br>
+Strong Voices - Fifteen American Speeches Worth Knowing - Tonya Bolden - 3H 5M<br>
 Talking Across the Divide - Justin Lee - 6H 4M<br>
 Teixcalaan 1 - A Memory Called Empire - Arkady Martine - 15H 41M<br>
 Thank You for Being Late - Thomas L. Friedman - 19H 53M<br>
@@ -842,7 +843,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 172 books - 2235H 17M / 93D 3H 17M<br>
+Queue - Current Audiobooks - 173 books - 2238H 23M / 93D 6H 23M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
 Completed in 2021 - 49 books - 460H 20M / 19D 4H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -862,22 +863,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-205 queued items: 2742H 23M / 114D 6H 23M<br>
+206 queued items: 2745H 29M / 114D 9H 29M<br>
 0 reserve titles are marked as high priority<br>
-25.5% of reserve items are queued<br>
+25.59% of reserve items are queued<br>
  <br>
-All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1187 titles - 14289H 54M / 595D 9H 54M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 382 titles - 4238H 8M / 176D 14H 8M<br>
-Total remaining in queue and reserve: 804 titles - 10048H 39M / 418D 16H 39M<br>
-Average completed per year: 44.4 titles - 492H 2M / 20D 12H 2M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
+Total remaining in queue and reserve: 805 titles - 10051H 45M / 418D 19H 45M<br>
+Average completed per year: 44.3 titles - 491H 53M / 20D 11H 53M<br>
+Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:04.705 (4.705 seconds)<br>
-Total time including file writes: 00:00:04.706 (4.706 seconds)
+Total time to process all reports: 00:00:01.883 (1.883 seconds)<br>
+Total time including file writes: 00:00:01.883 (1.883 seconds)
 </div>
 </body>
 </html>
