--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 08/13/2021 06:00<br>
+Reserved books sorted by name - 08/14/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-804 books<br>
+805 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Queue - Current Audiobooks)<br>
@@ -518,6 +518,7 @@ Star Wars Skywalker Strikes vol 1 - 4H 28M (Book Reserve - Comic Trades)<br>
 Star Wars the High Republic - The Rising Storm - Cavan Scott - 15H 36M (Queue - Current Audiobooks)<br>
 Stardust - Neil Gaiman - 6H 25M (Book Reserve - Audiobooks)<br>
 Still Standing - Governor Larry Hogan - 10H 21M (Book Reserve - Audiobooks)<br>
+Strong Voices - Fifteen American Speeches Worth Knowing - Tonya Bolden - 3H 5M (Queue - Current Audiobooks)<br>
 Suicide Squad vol 4 - 4H 28M (Book Reserve - Comic Trades)<br>
 Suicide Squad vol 5 - 6H 28M (Book Reserve - Comic Trades)<br>
 Super Sons vol 1 - 3H 59M (Book Reserve - Comic Trades)<br>
@@ -821,7 +822,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 172 books - 2235H 17M / 93D 3H 17M<br>
+Queue - Current Audiobooks - 173 books - 2238H 23M / 93D 6H 23M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
 Completed in 2021 - 49 books - 460H 20M / 19D 4H 20M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -841,22 +842,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-205 queued items: 2742H 23M / 114D 6H 23M<br>
+206 queued items: 2745H 29M / 114D 9H 29M<br>
 0 reserve titles are marked as high priority<br>
-25.5% of reserve items are queued<br>
+25.59% of reserve items are queued<br>
  <br>
-All books included in this report: 1186 titles - 14286H 48M / 595D 6H 48M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1187 titles - 14289H 54M / 595D 9H 54M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 382 titles - 4238H 8M / 176D 14H 8M<br>
-Total remaining in queue and reserve: 804 titles - 10048H 39M / 418D 16H 39M<br>
-Average completed per year: 44.4 titles - 492H 2M / 20D 12H 2M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
+Total remaining in queue and reserve: 805 titles - 10051H 45M / 418D 19H 45M<br>
+Average completed per year: 44.3 titles - 491H 53M / 20D 11H 53M<br>
+Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:04.705 (4.705 seconds)<br>
-Total time including file writes: 00:00:04.706 (4.706 seconds)
+Total time to process all reports: 00:00:01.883 (1.883 seconds)<br>
+Total time including file writes: 00:00:01.883 (1.883 seconds)
 </div>
 </body>
 </html>
