book and media report content update Mon 08/16/2021

--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 08/16/2021 06:00<br>
+Completed books sorted by folder - 08/16/2021 08:57<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 49 books - 460H 20M / 19D 4H 20M<br>
+Completed in 2021 : 50 books - 509H 31M / 21D 5H 31M<br>
 Total Comic Trades : 19<br>
-Average book length : 9H 23M<br>
-Hours read per week : 14H 7M<br>
-On pace to complete 78 books (737H 23M / 30D 17H 23M) by the end of 2021<br>
+Average book length : 10H 11M<br>
+Hours read per week : 15H 38M<br>
+On pace to complete 80 books (816H 13M / 34D 0H 13M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -23,6 +23,7 @@ Avengers Vol. 7 The Age of Khonshu - 5H 43M<br>
 Batman Fortnite Zero Point - 4H 43M<br>
 Batman White Knight - 7H 13M<br>
 Bobiverse 4 - Heaven's River - Dennis E. Taylor - 16H 57M<br>
+Capital and Ideology - Thomas Piketty - 49H 10M<br>
 Cosmic Ghost Rider vol 1 - 3H 29M<br>
 Culture 03 - Use of Weapons - Iain M. Banks - 13H 33M<br>
 Dawnshard - Brandon Sanderson - 6H 28M<br>
@@ -452,9 +453,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 174 books - 2240H 47M / 93D 8H 47M<br>
+Queue - Current Audiobooks - 173 books - 2191H 36M / 91D 7H 36M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 49 books - 460H 20M / 19D 4H 20M<br>
+Completed in 2021 - 50 books - 509H 31M / 21D 5H 31M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -472,22 +473,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-207 queued items: 2747H 53M / 114D 11H 53M<br>
+206 queued items: 2698H 42M / 112D 10H 42M<br>
 0 reserve titles are marked as high priority<br>
-25.68% of reserve items are queued<br>
+25.59% of reserve items are queued<br>
  <br>
 All books included in this report: 1188 titles - 14292H 18M / 595D 12H 18M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 382 titles - 4238H 8M / 176D 14H 8M<br>
-Total remaining in queue and reserve: 806 titles - 10054H 9M / 418D 22H 9M<br>
-Average completed per year: 44.3 titles - 491H 34M / 20D 11H 34M<br>
-Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Total completed since 01/01/2013: 383 titles - 4287H 19M / 178D 15H 19M<br>
+Total remaining in queue and reserve: 805 titles - 10004H 59M / 416D 20H 59M<br>
+Average completed per year: 44.4 titles - 497H 16M / 20D 17H 16M<br>
+Remaining years of reserve material at average yearly pace: 18.1<br>
+Remaining years of reserve material at current year pace: 10.1<br>
  <br>
-Total time to process all reports: 00:00:01.577 (1.577 seconds)<br>
-Total time including file writes: 00:00:01.577 (1.577 seconds)
+Total time to process all reports: 00:00:03.162 (3.162 seconds)<br>
+Total time including file writes: 00:00:03.162 (3.162 seconds)
 </div>
 </body>
 </html>
