--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 08/16/2021 06:00<br>
+Completed books sorted by name - 08/16/2021 08:57<br>
 -----------------------------------------------------<br>
  <br>
-382 books<br>
+383 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -59,6 +59,7 @@ Book of the New Sun 1 - The Shadow of the Torturer - 9H 22M (Completed in 2015)<
 Brave New World - Aldous Huxley - 8H 1M (Completed in 2013)<br>
 Brief Answers to the Big Questions - Stephen Hawking - 4H 53M (Completed in 2018)<br>
 Broken Earth 1 - The Fifth Season - N. K. Jemisin - 15H 31M (Completed in 2019)<br>
+Capital and Ideology - Thomas Piketty - 49H 10M (Completed in 2021)<br>
 Capital in the Twenty-First Century - Thomas Piketty - 24H 58M (Completed in 2019)<br>
 Captain Marvel Volume 2 Stay Fly - 3H 44M (Completed in 2020)<br>
 Cat's Cradle - Kurt Vonnegut - 5H 15M (Completed in 2015)<br>
@@ -399,9 +400,9 @@ Zones of Thought 1 - A Fire Upon the Deep - Vernor Vinge - 21H 43M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 174 books - 2240H 47M / 93D 8H 47M<br>
+Queue - Current Audiobooks - 173 books - 2191H 36M / 91D 7H 36M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 49 books - 460H 20M / 19D 4H 20M<br>
+Completed in 2021 - 50 books - 509H 31M / 21D 5H 31M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -419,22 +420,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-207 queued items: 2747H 53M / 114D 11H 53M<br>
+206 queued items: 2698H 42M / 112D 10H 42M<br>
 0 reserve titles are marked as high priority<br>
-25.68% of reserve items are queued<br>
+25.59% of reserve items are queued<br>
  <br>
 All books included in this report: 1188 titles - 14292H 18M / 595D 12H 18M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 382 titles - 4238H 8M / 176D 14H 8M<br>
-Total remaining in queue and reserve: 806 titles - 10054H 9M / 418D 22H 9M<br>
-Average completed per year: 44.3 titles - 491H 34M / 20D 11H 34M<br>
-Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Total completed since 01/01/2013: 383 titles - 4287H 19M / 178D 15H 19M<br>
+Total remaining in queue and reserve: 805 titles - 10004H 59M / 416D 20H 59M<br>
+Average completed per year: 44.4 titles - 497H 16M / 20D 17H 16M<br>
+Remaining years of reserve material at average yearly pace: 18.1<br>
+Remaining years of reserve material at current year pace: 10.1<br>
  <br>
-Total time to process all reports: 00:00:01.577 (1.577 seconds)<br>
-Total time including file writes: 00:00:01.577 (1.577 seconds)
+Total time to process all reports: 00:00:03.162 (3.162 seconds)<br>
+Total time including file writes: 00:00:03.162 (3.162 seconds)
 </div>
 </body>
 </html>
